# spotify-connector

./: .env.example  .env.sample  .gitignore  .readthedocs.yaml  LICENSE  Makefile  Pipfile  README.md  experimental_spotify_podcast_api.py  pylintrc  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: ci.yml  deploy.yml  lint.yml  quality.yml  security.yml  test.yml
docs/: conf.py  index.rst
spotifyconnector/: __init__.py  __main__.py  connector.py
tests/: README.md  conftest.py  shows.py  test_connection_handling.py
