[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotifyconnector"
version = "0.8.3"
description = "Spotify Connector for Podcast Data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Open Podcast" },
]
dependencies = [
    "requests",
    "loguru",
    "PyYAML",
    "tenacity",
]

[project.optional-dependencies]
docs = ["myst_parser"]

[project.scripts]
spotifyconnector = "spotifyconnector.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["spotifyconnector"]

[dependency-groups]
dev = [
    "black",
    "flake8",
    "isort",
    "pylint>=3.0.3",
    "pytest",
    "pytest-cov",
    "build",
    "twine",
    "bandit",
    "safety",
    "semgrep",
]

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
minversion = "6.0"

# Command line options
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]

# Define custom markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true